--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.43.4",
     "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.0.0",
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
